rtBiz Helpdesk Setup: Spacing issues

--- a/app/assets/admin/css/sass/_components.scss
+++ b/app/assets/admin/css/sass/_components.scss
@@ -11,10 +11,11 @@
 
 .rthd-notice {
     background-color: #fffaf0;
+	margin-bottom: 20px;
     padding: 8px 10px;
 }
 
-.rthd_wizard_container {
+.rthd-setup-wizard-row {
 	overflow: hidden;
 	margin-bottom: 20px;
 
@@ -25,6 +26,10 @@
 
 	input {
 		margin: 0;
+	}
+
+	li {
+		margin-bottom: 14px;
 	}
 }
 
@@ -41,5 +46,79 @@
 	img {
 		position: relative;
 		top: 4px;
+	}
+}
+
+#rthd-all-import-message {
+	display: inline-block;
+    line-height: 28px;
+    margin-left: 5px;
+}
+
+.rthd-setup-list-users {
+	padding-left: 24%;
+	text-align: center;
+
+	th {
+		padding: 10px;
+		text-align: left;
+	}
+
+	td {
+		padding: 2px 10px;
+	}
+
+	.avatar {
+		border-radius: 100%;
+		float: left;
+		margin-bottom: 5px;
+		margin-right: 8px;
+		position: relative;
+		top: 3px;
+	}
+
+	input[type="radio"] {
+		vertical-align: top;
+	}
+
+	.delete_row {
+		background-color: #dd3d36;
+		border-radius: 100%;
+		box-shadow: 0 0 0;
+		color: #fff;
+		display: inline-block;
+		float: none;
+		font-size: 14px;
+		font-weight: bold;
+		height: 15px;
+		line-height: 16px;
+		padding: 0;
+		position: relative;
+		text-align: center;
+		text-decoration: none;
+		vertical-align: top;
+		width: 15px;
+
+		&:focus,
+			&:hover {
+			color: #fff;
+		}
+	}
+}
+
+.rthd-setup-user-title {
+	float: left;
+    position: relative;
+    text-decoration: none;
+    top: 5px;
+}
+
+.rthd-support-process {
+    margin-bottom: 20px;
+    overflow: hidden;
+
+	span {
+		float: left;
+		margin-right: 10px;
 	}
 }
