--- a/app/assets/admin/css/sass/_steps.scss
+++ b/app/assets/admin/css/sass/_steps.scss
@@ -11,7 +11,7 @@
 	}
 
 	.content {
-		margin-bottom: 20px;
+		//margin-bottom: 20px;
 	}
 
 	.actions {
